--- a/WinkelAppProject/nbproject/private/private.properties
+++ b/WinkelAppProject/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Bono\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
+user.properties.file=C:\\Users\\Tjarco\\.netbeans\\7.1.2\\build.properties
