--- a/WinkelAppProject/nbproject/project.properties
+++ b/WinkelAppProject/nbproject/project.properties
@@ -26,7 +26,16 @@ dist.jar=${dist.dir}/WinkelApplicatieOut2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gnujaxp.jar=E:\\mijn documenten\\NetBeansProjects\\jfreechart-1.0.14\\lib\\gnujaxp.jar
+file.reference.iText-2.1.5.jar=E:\\mijn documenten\\NetBeansProjects\\jfreechart-1.0.14\\lib\\iText-2.1.5.jar
+file.reference.jcommon-1.0.17.jar=E:\\mijn documenten\\NetBeansProjects\\jfreechart-1.0.14\\lib\\jcommon-1.0.17.jar
+file.reference.jfreechart-1.0.14-experimental.jar=E:\\mijn documenten\\NetBeansProjects\\jfreechart-1.0.14\\lib\\jfreechart-1.0.14-experimental.jar
+file.reference.jfreechart-1.0.14-swt.jar=E:\\mijn documenten\\NetBeansProjects\\jfreechart-1.0.14\\lib\\jfreechart-1.0.14-swt.jar
+file.reference.jfreechart-1.0.14.jar=E:\\mijn documenten\\NetBeansProjects\\jfreechart-1.0.14\\lib\\jfreechart-1.0.14.jar
+file.reference.junit.jar=E:\\mijn documenten\\NetBeansProjects\\jfreechart-1.0.14\\lib\\junit.jar
 file.reference.mysql-connector-java-5.1.22-bin.jar=../mysql-connector-java-5.1.22/mysql-connector-java-5.1.22-bin.jar
+file.reference.servlet.jar=E:\\mijn documenten\\NetBeansProjects\\jfreechart-1.0.14\\lib\\servlet.jar
+file.reference.swtgraphics2d.jar=E:\\mijn documenten\\NetBeansProjects\\jfreechart-1.0.14\\lib\\swtgraphics2d.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -34,7 +43,16 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.mysql-connector-java-5.1.22-bin.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gnujaxp.jar}:\
+    ${file.reference.iText-2.1.5.jar}:\
+    ${file.reference.jcommon-1.0.17.jar}:\
+    ${file.reference.jfreechart-1.0.14-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.14-swt.jar}:\
+    ${file.reference.jfreechart-1.0.14.jar}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
